// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt component matches snapshot (default props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (default props) 2`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
  isOpen={true}
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (set all props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    >
      desc
    </div>
  }
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <ForwardRef
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
  isOpen={true}
  role="alertdialog"
  title="title"
/>
`;
